<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="@string/false_button"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cheat_button"
            android:text="@string/cheat_button"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/count_cheats_textview"
            android:text="Осталось 5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/prev_button"
        android:drawablePadding="6dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/arrow_left"
        android:text="@string/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/next_button"
        android:drawablePadding="6dp"
        android:textStyle="bold"
        android:drawableRight="@drawable/arrow_right"
        android:text="@string/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:contentDescription="@string/prev_button"
            android:id="@+id/prev_imbutton"
            android:layout_margin="26dp"
            android:src="@drawable/arrow_left"
            android:layout_width="46dp"
            android:layout_height="46dp" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:onClick="OnExitButtonClick"
            android:text="ВЫХОД"
            android:textSize="18dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <ImageButton
            android:contentDescription="@string/next_button"
            android:id="@+id/next_imbutton"
            android:layout_margin="26dp"
            android:src="@drawable/arrow_right"
            android:layout_width="46dp"
            android:layout_height="46dp" />

    </LinearLayout>

</LinearLayout>

